<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="74dp">
        <TextView
            android:text="@string/foreground_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="24dp"
            android:textColor="#aaaaaa"
            android:text="@string/fs_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/foregroundServiceSwitch"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/accessibilityButton"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="74dp">
        <TextView
            android:text="@string/accessibility_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="24dp"
            android:textColor="#aaaaaa"
            android:text="@string/as_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/accessibilityStateText"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/appListButton"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="74dp">
        <TextView
            android:text="@string/applist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="24dp"
            android:textColor="#aaaaaa"
            android:text="@string/applist_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</LinearLayout>